// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Block Menu & Menu Items renders correctly 1`] = `
<ul
  className="sc-fznyYp gKnxrx"
>
  <li
    className="sc-fznLxA rlFWj"
    onClick={[Function]}
  >
    <span
      className="sc-fzoydu fwwaFn"
      size={4}
    >
       Item 1 
    </span>
  </li>
  <li
    className="sc-fznLxA rlFWj"
    onClick={[Function]}
  >
    <span
      className="sc-fzoydu fwwaFn"
      size={4}
    >
       Item 2 
    </span>
  </li>
  <li
    className="sc-fznLxA rlFWj"
    onClick={[Function]}
  >
    <span
      className="sc-fzoydu fwwaFn"
      size={4}
    >
       Item 3 
    </span>
  </li>
</ul>
`;

exports[`Inline Menu & Menu Items renders correctly 1`] = `
<ul
  className="sc-fznyYp gKnxrx"
>
  <li
    className="sc-fznLxA bXsMZb"
    onClick={[Function]}
  >
    <span
      className="sc-fzoydu fwwaFn"
      size={4}
    >
       Item 1 
    </span>
  </li>
  <li
    className="sc-fznLxA bXsMZb"
    onClick={[Function]}
  >
    <span
      className="sc-fzoydu fwwaFn"
      size={4}
    >
       Item 2 
    </span>
  </li>
  <li
    className="sc-fznLxA bXsMZb"
    onClick={[Function]}
  >
    <span
      className="sc-fzoydu fwwaFn"
      size={4}
    >
       Item 3 
    </span>
  </li>
</ul>
`;
